--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<a href="images/thumbs/myriam-jessier-eveI7MOcSmw-unsplash.jpeg" class="image fit thumb"><img src="images/thumbs/myriam-jessier-eveI7MOcSmw-unsplash.jpeg" alt="" /></a>
 								<h3>Project 3, Data Analysis</h3>
 								<p>Data Analysis in R Studio using the Stack overflow 2018 developer survey.</p>
-								<p><a href="#" class="button">View</a></P>
+								<p><a href="https://d919b7bf90944b09b7afbc7fa0fbd0d0.app.posit.cloud/file_show?path=%2Fcloud%2Fproject%2FSTACK_OVERFLOW_2018_DEV_SURVEY_ANALYSIS.html" class="button">View</a></P>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/myriam-jessier-eveI7MOcSmw-unsplash.jpeg" class="image fit thumb"><img src="images/thumbs/myriam-jessier-eveI7MOcSmw-unsplash.jpeg" alt="" /></a>
@@ -68,13 +68,13 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/luke-chesser-JKUTrJ4vK00-unsplash.jpeg" class="image fit thumb"><img src="images/thumbs/luke-chesser-JKUTrJ4vK00-unsplash.jpeg" alt="" /></a>
-								<h3>Project 5, Data Analysis</h3>
+								<h3>Project 5, Data Visualization</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 								<p><a href="#" class="button">View</a></P>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/luke-chesser-JKUTrJ4vK00-unsplash.jpeg" class="image fit thumb"><img src="images/thumbs/luke-chesser-JKUTrJ4vK00-unsplash.jpeg" alt="" /></a>
-								<h3>Project 6, Data Analysis</h3>
+								<h3>Project 6, Data Visualization</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 								<p><a href="#" class="button">View</a></P>
 							</article>
